# cyber-pilot

./: .coveragerc  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  NOTICE  README-2.md  README.md  pyproject.toml  sonar-project.properties  vulture_whitelist.py  whatsnew.toml
.bootstrap/.core/: whatsnew.toml
.bootstrap/.core/architecture/: AUDIT-REPORT.md  DECOMPOSITION.md  PRD.md
.bootstrap/.core/requirements/: execution-protocol.md
.bootstrap/.core/workflows/: plan.md  (+1 more)
.bootstrap/.gen/: AGENTS.md
.bootstrap/config/: AGENTS.md  artifacts.toml  core.toml  pr-review.toml
.claude/commands/: cypilot.md
.cursor/rules/: cypilot.mdc
.github/workflows/: ci.yml
architecture/: DECOMPOSITION.md  DESIGN.md
architecture/ADR/: 0001-cpt-cypilot-adr-remove-blueprint-system-v1.md  0002-cpt-cypilot-adr-python-stdlib-only-v1.md  0003-cpt-cypilot-adr-pipx-distribution-v1.md  0005-cpt-cypilot-adr-markdown-contract-v1.md  0006-cpt-cypilot-adr-gh-cli-integration-v1.md  0007-cpt-cypilot-adr-proxy-cli-pattern-v1.md  0008-cpt-cypilot-adr-three-directory-layout-v1.md  0010-cpt-cypilot-adr-skill-md-entry-point-v1.md  0011-cpt-cypilot-adr-structured-id-format-v1.md  0012-cpt-cypilot-adr-git-style-conflict-markers-v1.md  0013-cpt-cypilot-adr-extract-sdlc-kit-to-github-v1.md  0019-cpt-cypilot-adr-unified-manifest-hierarchy-v1.md
architecture/features/: agent-integration.md  core-infra.md  developer-experience.md  execution-plans.md  kit-management.md  project-extensibility.md  spec-coverage.md  v2-v3-migration.md
guides/: CONFIGURATION.md  PROJECT-EXTENSIBILITY.md  USAGE-GUIDE.md
requirements/: code-checklist.md  prompt-bug-finding.md
skills/cypilot/: SKILL.md
src/cypilot_proxy/: cache.py  cli.py  resolve.py
tests/: _test_helpers.py  conftest.py  test_adapter_info.py  test_agents_coverage.py  test_artifacts_meta.py  test_chunk_input.py  test_cli_helpers.py  test_cli_integration.py  test_cli_py_coverage.py  test_cmd_generate_agents_v2.py  test_codebase.py  test_constraints_utils.py  test_core_structure.py  test_coverage_utils.py  test_diff_engine.py  test_files_utils.py  test_generate_manifest_agents.py  test_integration_compat.py  test_kit.py  test_kit_manifest_migration.py  test_kit_manifest_resolve.py  test_kit_manifest_validate.py  test_kit_upgrade_e2e.py  test_layer_discovery.py  test_layer_vars.py  test_manifest_includes.py  test_manifest_v2.py  test_merge_components.py  test_migrate.py  test_provenance_discovery.py  test_resolve_vars.py  test_schema_translation.py  test_spec_coverage.py  test_subagent_registration.py  test_toc.py  test_toml_injection.py  test_ui_human_mode.py  test_update.py  test_where_queries.py  test_workspace.py
workflows/: generate.md  plan.md
(+99 files in other folders)
