[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cypilot"
version = "3.0.9-beta"
description = "Cypilot global CLI proxy — deterministic agent tool for structured workflows"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11.4"
# @cpt-dod:cpt-cypilot-dod-core-infra-global-package:p1 — zero third-party dependencies
dependencies = []

[project.scripts]
# @cpt-dod:cpt-cypilot-dod-core-infra-global-package:p1 — console entry points
cpt = "cypilot_proxy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint.main]
jobs = 0
persistent = false
py-version = "3.11"
ignore-paths = [
    "^\\.bootstrap/",
    "^examples/",
    "^tests/",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 8
max-positional-arguments = 8

[tool.pylint.reports]
score = false

# [tool.pylint."messages control"]
# disable = [
#     "duplicate-code",
#     "fixme",
#     "import-outside-toplevel",
#     "line-too-long",
#     "missing-class-docstring",
#     "missing-function-docstring",
#     "missing-module-docstring",
#     "too-few-public-methods",
#     "too-many-arguments",
#     "too-many-branches",
#     "too-many-instance-attributes",
#     "too-many-lines",
#     "too-many-locals",
#     "too-many-positional-arguments",
#     "too-many-public-methods",
#     "too-many-return-statements",
#     "too-many-statements",
#     "wildcard-import",
# ]
